tests/haste_use_name_reducers/haste_use_name_reducers.exp
Error: index.js:3
  3: (require('Module1'): boolean);
      ^^^^^^^^^^^^^^^^^^ Cannot cast `require(...)` to boolean because `Decl` [1] is incompatible with boolean [2].
  References:
    7: module.exports = new Decl(); 
                        ^^^^^^^^^^ [1]: `Decl`. See: dir1/Module1.js.flow:7
    3: (require('Module1'): boolean);
                            ^^^^^^^ [2]: boolean

Error: index.js:6
  6: require('Module4');
             ^^^^^^^^^ Module4. Required module not found


Found 2 errors
